[gd_scene load_steps=8 format=3 uid="uid://dhfax6f0r5sbf"]

[ext_resource type="PackedScene" uid="uid://b5wl1fbu8w4rm" path="res://common/pillar.tscn" id="1_75le4"]
[ext_resource type="Script" path="res://rooms/thermic_room.gd" id="1_448yj"]
[ext_resource type="MeshLibrary" uid="uid://bwbsu80ly13cd" path="res://tilesets/dungeon_tileset.tres" id="3_ekc2x"]
[ext_resource type="PackedScene" uid="uid://boqvuwulwsx17" path="res://shaders/fire.tscn" id="4_cayik"]
[ext_resource type="PackedScene" uid="uid://dowkdyyao5rfd" path="res://common/navigation_point.tscn" id="5_nhrmg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_nt7oc"]
radius = 0.2

[sub_resource type="SphereMesh" id="SphereMesh_fskxf"]
radius = 0.2
height = 0.4

[node name="ThermicRoom" type="Node3D"]
script = ExtResource("1_448yj")

[node name="FrozenPillar" parent="." instance=ExtResource("1_75le4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0.3, -1.5)

[node name="FrozenObject" type="StaticBody3D" parent="FrozenPillar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FrozenPillar/FrozenObject"]
shape = SubResource("SphereShape3D_nt7oc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="FrozenPillar/FrozenObject"]
mesh = SubResource("SphereMesh_fskxf")

[node name="BurningPillar" parent="." instance=ExtResource("1_75le4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.3, -1.5)

[node name="BurningObject" type="StaticBody3D" parent="BurningPillar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BurningPillar/BurningObject"]
shape = SubResource("SphereShape3D_nt7oc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BurningPillar/BurningObject"]
mesh = SubResource("SphereMesh_fskxf")

[node name="FreezePillar" parent="." instance=ExtResource("1_75le4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0.3, 1.5)

[node name="FreezeObject" type="StaticBody3D" parent="FreezePillar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FreezePillar/FreezeObject"]
shape = SubResource("SphereShape3D_nt7oc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="FreezePillar/FreezeObject"]
mesh = SubResource("SphereMesh_fskxf")

[node name="BurnPillar" parent="." instance=ExtResource("1_75le4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.3, 1.5)

[node name="BurnObject" type="StaticBody3D" parent="BurnPillar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BurnPillar/BurnObject"]
shape = SubResource("SphereShape3D_nt7oc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BurnPillar/BurnObject"]
mesh = SubResource("SphereMesh_fskxf")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("3_ekc2x")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(1, 0, 1, 1, 65535, 1, 0, 65535, 1, 65535, 65535, 1, 65535, 0, 1, 0, 0, 1, 65534, 0, 1, 65534, 65535, 1, 65535, 65534, 1, 0, 65534, 1, 2, 65535, 1, 2, 0, 1, 1, 1, 1, 0, 1, 1, 65535, 1, 1, 65534, 1, 1, 0, 2, 1, 1, 2, 1, 2, 1, 1, 2, 65534, 1, 1, 65534, 1, 2, 2, 1, 65534, 65534, 1, 65535, 2, 1, 65533, 2, 1, 65533, 1, 1, 65533, 0, 1, 65533, 65535, 1, 65533, 65534, 1, 65534, 2, 1, 3, 2, 1, 3, 1, 1, 3, 0, 1, 3, 65534, 1, 3, 65533, 1, 3, 65535, 1, 2, 65533, 1, 1, 65533, 1, 0, 65533, 1, 65535, 65533, 1, 65534, 65533, 1, 65533, 65533, 1, 65532, 65533, 1, 65532, 65534, 1, 65532, 65535, 1, 65532, 0, 1, 65532, 1, 1, 65532, 2, 1, 65532, 3, 1, 65533, 3, 1, 65534, 3, 1, 65535, 3, 1, 0, 3, 1, 1, 3, 1, 2, 3, 1, 3, 3, 1, 4, 65533, 655362, 4, 65534, 1441793, 4, 65535, 1441793, 4, 0, 1441793, 4, 1, 1441793, 4, 2, 1048578, 4, 3, 1048576, 3, 4, 0, 2, 4, 0, 1, 4, 0, 0, 4, 0, 65535, 4, 0, 65534, 4, 0, 65533, 4, 0, 65532, 4, 0, 65531, 3, 1441792, 65531, 2, 2, 65531, 1, 1441793, 65531, 0, 1441793, 65531, 65535, 1441793, 65531, 65534, 1441793, 65531, 65533, 1441794, 65532, 65532, 655361, 65533, 65532, 655361, 65534, 65532, 655361, 65535, 65532, 655361, 0, 65532, 655361, 1, 65532, 655361, 2, 65532, 655361, 3, 65532, 655361, 65532, 65531, 655360, 65533, 65531, 655360, 65534, 65531, 655360, 65535, 65531, 655360, 0, 65531, 655360, 3, 65531, 655360, 2, 65531, 655360, 1, 65531, 655360, 4, 65532, 1048576, 65531, 65532, 1441792, 5, 1, 1441793, 5, 0, 1441793, 5, 65535, 1441793, 5, 65534, 1441793, 65530, 1, 1441793, 65530, 0, 1441793, 65530, 65535, 1441793, 65530, 65534, 1441793, 5, 65533, 655360, 65530, 65533, 655360, 5, 2, 0, 6, 65534, 1048576, 6, 65535, 1048576, 6, 0, 1048576, 6, 1, 1048576, 65530, 2, 0, 65529, 1, 1441792, 65529, 0, 1441792, 65529, 65535, 1441792, 65529, 65534, 1441792)
}

[node name="NWFire" parent="." instance=ExtResource("4_cayik")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.824, -3)

[node name="NWFireLight" type="OmniLight3D" parent="NWFire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.145, 0, 0.3)
light_energy = 0.4
omni_range = 42.294
omni_attenuation = 1.4048

[node name="NEFire" parent="." instance=ExtResource("4_cayik")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1.824, -3.00032)

[node name="NEFireLight" type="OmniLight3D" parent="NEFire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.145, 0, 0.475)
light_energy = 0.4
omni_range = 42.294
omni_attenuation = 1.4048

[node name="SWFire" parent="." instance=ExtResource("4_cayik")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.824, 3)

[node name="SWFireLight" type="OmniLight3D" parent="SWFire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.225, 0, 0.43)
light_energy = 0.4
omni_range = 42.294
omni_attenuation = 1.4048

[node name="SEFire" parent="." instance=ExtResource("4_cayik")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1.824, 2.99968)

[node name="SEFireLight" type="OmniLight3D" parent="SEFire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.09, 0, 0.44)
light_energy = 0.4
omni_range = 42.294
omni_attenuation = 1.4048

[node name="NavPointFreeze" parent="." instance=ExtResource("5_nhrmg")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="NavPointBurn" parent="." instance=ExtResource("5_nhrmg")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="NavPointDoorS" parent="." instance=ExtResource("5_nhrmg")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
